added today's lecture code.

--- a/lectures/2018-10-02 C++ - loops 1/lecture/lecture/lecture.vcxproj
+++ b/lectures/2018-10-02 C++ - loops 1/lecture/lecture/lecture.vcxproj
@@ -127,6 +127,7 @@
     <Text Include="input.txt" />
     <Text Include="notes.txt" />
     <Text Include="output.txt" />
+    <Text Include="test.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
