--- a/lectures/2018-10-02 C++ - loops 1/lecture/lecture/lecture.vcxproj.filters
+++ b/lectures/2018-10-02 C++ - loops 1/lecture/lecture/lecture.vcxproj.filters
@@ -29,5 +29,8 @@
     <Text Include="notes.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="test.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
