added today's final lecture code.

--- a/lectures/2018-11-01 C++ - Functions 2/lecture/lecture/lecture.vcxproj
+++ b/lectures/2018-11-01 C++ - Functions 2/lecture/lecture/lecture.vcxproj
@@ -126,6 +126,8 @@
   <ItemGroup>
     <Text Include="input.txt" />
     <Text Include="kennedy.txt" />
+    <Text Include="kennedy_out.txt" />
+    <Text Include="kennedy_out_decode.txt" />
     <Text Include="notes.txt" />
     <Text Include="output.txt" />
     <Text Include="test.txt" />
