--- a/lectures/2018-11-01 C++ - Functions 2/lecture/lecture/lecture.vcxproj.filters
+++ b/lectures/2018-11-01 C++ - Functions 2/lecture/lecture/lecture.vcxproj.filters
@@ -35,5 +35,11 @@
     <Text Include="kennedy.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="kennedy_out.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="kennedy_out_decode.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
