--- a/lectures/2018-11-08 C++ - More Pointers/lecture/lecture/lecture.vcxproj.filters
+++ b/lectures/2018-11-08 C++ - More Pointers/lecture/lecture/lecture.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="FileOperations.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Lecture11-8.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
@@ -53,6 +56,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FileOperations.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Lecture11-8.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
