added today's final lecture code.

--- a/lectures/2018-11-29 C++ - Student Records/lecture/lecture/lecture.vcxproj
+++ b/lectures/2018-11-29 C++ - Student Records/lecture/lecture/lecture.vcxproj
@@ -129,6 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileOperations.h" />
+    <ClInclude Include="Student.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
