--- a/lectures/2018-11-29 C++ - Student Records/lecture/lecture/lecture.vcxproj.filters
+++ b/lectures/2018-11-29 C++ - Student Records/lecture/lecture/lecture.vcxproj.filters
@@ -31,5 +31,8 @@
     <ClInclude Include="FileOperations.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Student.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
